--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "scripts": {
     "lint": "prettier ./src --write",
-    "gen:schema": "tsc ./src/generator.ts --outDir dist && node ./dist/generator.js"
+    "gen:schema": "tsc ./src/generator.ts --outDir dist --isolatedModules && node ./dist/generator.js"
   },
   "devDependencies": {
     "@tesler-ui/core": "^1.26.2",
     "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "axios": "^0.21.1",
     "prettier": "^2.2.1",
     "typescript-json-schema": "^0.48.0"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.16",
     "json-stable-stringify": "^1.0.1",
     "path": "^0.12.7",
     "typescript": "^4.1.3"
