--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
+  "name": "@tesler-ui/schema",
+  "version": "0.1.0",
+	"author": {
+		"name": "Constantine Dergachev",
+		"email": "dergachev@hotmail.com",
+		"url": "https://github.com/dergash"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tesler-platform/tesler-schema.git"
+  },
+  "homepage": "https://github.com/tesler-platform/tesler-schema",
+  "main": "dist/index.js",
+  "license": "Apache-2.0",
+  "bin": "./bin/build-schema",
   "scripts": {
     "lint": "prettier ./src --write",
-    "gen:schema": "tsc ./src/generator.ts --outDir dist --isolatedModules && node ./dist/generator.js"
+    "build": "tsc ./src/generator.ts --outDir dist --importsNotUsedAsValues remove",
+    "gen:schema": "yarn build && node ./dist/generator.js"
   },
   "devDependencies": {
-    "@tesler-ui/core": "^1.26.2",
     "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "axios": "^0.21.1",
     "prettier": "^2.2.1",
+    "typescript": "^4.1.3",
     "typescript-json-schema": "^0.48.0"
   },
   "dependencies": {
-    "@types/react-redux": "^7.1.16",
     "json-stable-stringify": "^1.0.1",
-    "path": "^0.12.7",
-    "typescript": "^4.1.3"
+    "path": "^0.12.7"
   }
 }
