--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesler-ui/schema",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": {
     "name": "Constantine Dergachev",
     "email": "dergachev@hotmail.com",
@@ -22,11 +22,11 @@
   "devDependencies": {
     "@types/node": "^14.14.22",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3",
-    "typescript-json-schema": "^0.48.0"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "json-stable-stringify": "^1.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "typescript-json-schema": "^0.48.0"
   }
 }
