--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesler-ui/schema",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "author": {
     "name": "Constantine Dergachev",
     "email": "dergachev@hotmail.com",
@@ -11,13 +11,14 @@
     "url": "git://github.com/tesler-platform/tesler-schema.git"
   },
   "homepage": "https://github.com/tesler-platform/tesler-schema",
-  "main": "dist/generator.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "bin": "./bin/build-schema",
   "scripts": {
     "lint": "prettier ./src --write",
-    "build": "tsc ./src/generator.ts --outDir dist --importsNotUsedAsValues remove",
-    "gen:schema": "yarn build && node ./dist/generator.js"
+    "build": "tsc",
+    "gen:schema": "yarn build && node ./dist/index.js"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
